@@ -1,4 +1,3 @@
-Buffer information is not updated when server lags
 HW and SW filters settings in the same place
 User can type any aspect ratio and zoom
 Handle auto channels/samplerate change
